--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,21 @@
 <!doctype html>
 <html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>GoogleMaps</title>
-  <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-</head>
-<body>
-  <app-root></app-root>
-</body>
+
+  <head>
+    <meta charset="utf-8">
+    <title>GoogleMaps</title>
+    <base href="/">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <!-- <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC2GzgTEHS2Dt3A541ar4Li358M3ILMOPk"></script> -->
+    <!-- <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBI4ocfFEN9xpzcEHq7KB1HGNZrfFK3xn4&libraries=drawing,geometry,places"></script> -->
+
+    <script src="https://maps.googleapis.com/maps/api/js?key=&libraries=drawing,geometry,places"></script>
+
+  </head>
+
+  <body>
+    <app-root></app-root>
+  </body>
+
 </html>
